--- a/payment_processing.client/src/App.css
+++ b/payment_processing.client/src/App.css
@@ -1,7 +1,7 @@
 ﻿#root {
     max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+    margin: 0;
+    padding: 0;
     text-align: center;
 }
 
@@ -9,3 +9,4 @@ th, td {
     padding-left: 1rem;
     padding-right: 1rem;
 }
+
